# AILearningBot

./: MoreExercise.md  README.md  aibot_followingC.launch  aibot_followingC.py  aibot_lane_keepingV.py
opencv_start/: 01_eximage.py  02_exvideo.py  03_camera.py  04_lanedetect.py  05_lanedetect_video.py
ros_aibot_drive/: CMakeLists.txt  package.xml
ros_aibot_drive/launch/: aibot_aeb.launch  aibot_darknet_ready.launch  aibot_following.launch  aibot_following_fca.launch  aibot_trt_ready.launch
ros_aibot_drive/src/: OpenCV_Functions.py  aibot_aeb.py  aibot_following.py  aibot_following_fca.py  aibot_lane_keeping.py  aibot_lane_keeping_aeb.py
ros_object_detect/: CMakeLists.txt  package.xml
ros_object_detect/launch/: ros_darknet.launch  ros_trt_detectnet.launch
ros_object_detect/msg/: DetInfo.msg
ros_object_detect/src/: darknet.py  darknet_node2.py  ros_darknet_test.py  ros_trt_detectnet.py  trt_detectnet_node2.py
ros_object_detect/yolo/: _coco.data
ros_sensor_test/: CMakeLists.txt  package.xml
ros_sensor_test/launch/: camera_test.launch  lidar_sub_test.launch
ros_sensor_test/src/: camera_node.py  lidar_node.py
